@@ -22,6 +22,7 @@ void __cdecl __declspec(dllimport) __wgetmainargs (
 int win32_cmdline_utf8(int * argc, char *** argv)
 {
 	int argcounter;
+	int nargc;
 	wchar_t **argv_wide;
 	wchar_t **env;
 	char *argvptr;
@@ -31,9 +32,21 @@ int win32_cmdline_utf8(int * argc, char *** argv)
 	if(argv == NULL || argc == NULL) return -1;
 
 	startup.newmode = 0;
-	__wgetmainargs(argc, &argv_wide,&env,1, &startup);
+	nargc = -1;
+	argv_wide = NULL;
+	env = NULL;
+	__wgetmainargs(&nargc, &argv_wide,&env,1, &startup);
+	if (nargc == -1 || argv_wide == NULL || env == NULL) {
+		error("Cannot allocate memory for wide command line.");
+		return -1;
+	}
+	*argc = nargc;
 	*argv = (char **)calloc(sizeof (char *), *argc);
-	if(*argv == NULL){ error("Cannot allocate memory for command line."); return -1; }
+	if(*argv == NULL)
+	{
+		error("Cannot allocate memory for UTF-8 command line.");
+		return -1;
+	}
 
 	for(argcounter = 0; argcounter < *argc; argcounter++)
 	{
